fixing spacing issues

--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -48,9 +48,13 @@ input[type=text] {
 
 nav.navbar{
   background-color: #FFFFFF;
-  padding:40px;
-  height: 100px;
+  padding: .5%;
+  padding-left: 1%;
+  padding-right: 1%;
+  height: 100%;
   width: 100%;
+  border-bottom: 1px solid black;
+
 }
 
 .navbar-brand{
